--- a/package.json
+++ b/package.json
@@ -10,5 +10,12 @@
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0"
+    
+  },
+  "scripts": {
+    "start": "node server.js",    
+    "build": "echo 'No build step required for this project'" 
   }
+  
+  
 }
