--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     
   },
   "scripts": {
-    "start": "node server.js",    
-    "build": "echo 'No build step required for this project'" 
+    "start": "node server.js"
   }
   
   
